[package]
name = "kaboom"
description = "CLI utility to assist in managing Atom feeds, perhaps for DIY blogs"
version = "0.1.0"
authors = ["klardotsh <josh@klar.sh>"]
license = "0BSD"
edition = "2021"
rust-version = "1.60"
homepage = "https://sr.ht/~klardotsh/kaboom"
repository = "https://git.sr.ht/~klardotsh/kaboom"

[dependencies]
anyhow = "1.0"
argh = "0.1"
atom_syndication = "0.12"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"

[dev_dependencies]
